# ShelfFrame

./: .gitignore  README.md  requirements.txt
backend/: pyproject.toml
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/app/api/routes/: activity.py  media.py  progress.py  scan.py  settings.py  tags.py  works.py
backend/app/core/: config.py
backend/app/services/: activity.py  media_access.py  media_roots.py  player_metadata.py  scanner.py  search.py  sidecar.py  thumbnails.py
backend/tests/: test_api.py  test_progress_api.py  test_scanner.py  test_search.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  router.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: WorkCard.vue
frontend/src/pages/: DashboardPage.vue  LibraryPage.vue  PlayerPage.vue  ReaderPage.vue  SettingsPage.vue  WorkDetailPage.vue
frontend/src/pages/__tests__/: PlayerPage.spec.ts  ReaderPage.spec.ts
frontend/src/reader/: progress.ts
